--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <meta property="twitter:description" content="Access a collection of dog facts in a convenient JSON format with the Dog API. Perfect for website and mobile app development, the API provides quick and easy access to a wide range of dog facts.">
     <meta property="twitter:image" content="<%= image_url 'social.jpg' %>">
 
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
     <%= javascript_include_tag :application, integrity: true %>
     <% if swagger %>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.5/swagger-ui-bundle.min.js" integrity="sha512-8FFvTCXo6KgUt72SMpgMgMHoHnNUOPxndku0/mc+B98qIeEfZ6dpPDYJv6a1TRWHoEZeMQAKQzcwSmQixM9v2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
