--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <li><%= link_to_unless_current "Stats", stats_path %></li>
           <li><%= link_to_unless_current "Terms of Use", terms_path %></li>
           <li><%= link_to_unless_current "API Docs", docs_path %></li>
-          <li><%= link_to "GitHub ⧉", "https://github.com/kinduff/dog-api", target: '_blank' %></li>
+          <li><%= link_to "GitHub ⧉", "https://github.com/kinduff/dogapi.dog", target: '_blank' %></li>
         </ul>
       </nav>
     </header>
