Updates titles, descriptions, etc

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,16 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐶</text></svg>">
 
     <meta name="title" content="<%= page_title %>">
-    <meta name="description" content="Access a collection of dog facts in a convenient JSON format with the Dog API. Perfect for website and mobile app development, the API provides quick and easy access to a wide range of dog facts.">
+    <meta name="description" content="The Dog API provides a wealth of information on dog breeds, groups, and fun facts. Access and integrate this data into your website or application with our easy-to-use JSON API.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dogapi.dog">
     <meta property="og:title" content="<%= page_title %>">
-    <meta property="og:description" content="Access a collection of dog facts in a convenient JSON format with the Dog API. Perfect for website and mobile app development, the API provides quick and easy access to a wide range of dog facts.">
+    <meta property="og:description" content="The Dog API provides a wealth of information on dog breeds, groups, and fun facts. Access and integrate this data into your website or application with our easy-to-use JSON API.">
     <meta property="og:image" content="<%= image_url 'social.jpg' %>">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dogapi.dog">
     <meta property="twitter:title" content="<%= page_title %>">
-    <meta property="twitter:description" content="Access a collection of dog facts in a convenient JSON format with the Dog API. Perfect for website and mobile app development, the API provides quick and easy access to a wide range of dog facts.">
+    <meta property="twitter:description" content="The Dog API provides a wealth of information on dog breeds, groups, and fun facts. Access and integrate this data into your website or application with our easy-to-use JSON API.">
     <meta property="twitter:image" content="<%= image_url 'social.jpg' %>">
 
     <script async src="https://cdn.splitbee.io/sb.js"></script>
@@ -37,7 +37,7 @@
     <header>
       <h1>🐶 Dog API <span>by kinduff</span></h1>
       <p>
-        The Dog API provides dog facts as a service!
+        The Dog API provides dog data as a service!
       </p>
       <nav>
         <ul>
@@ -53,7 +53,7 @@
       <%= yield %>
     </main>
     <footer>
-      <p><small>Dog API by kinduff, providing Dog Facts since 2016</small></p>
+      <p><small>Dog API by kinduff, providing Dog Data since 2016</small></p>
     </footer>
     <% if swagger %>
       <script>
