Typo: entretainment -> entertainment

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,7 +27,7 @@
 <p>I lost ownership of the Slack application due to Slack's policy. I tried to regain ownership of my own application but it was not possible.</p>
 
 <h4>2. Why is this free?</h4>
-<p>This API is widely used as an education tool, and for entretainment purposes. I've been hosting it for free for 6 years I'd like to keep it that way.</p>
+<p>This API is widely used as an education tool, and for entertainment purposes. I've been hosting it for free for 6 years I'd like to keep it that way.</p>
 <p>If you are interested in supporting this API, you can always <a href="https://www.buymeacoffee.com/kinduff" target="_blank">Buy me a coffee</a>.</p>
 
 <h4>3. Why is V1 deprecated?</h4>
