--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,6 +19,10 @@
   Best of all, it's <strong>completely free to use</strong>!
 </p>
 
+<p>
+  <a href="https://www.producthunt.com/posts/dog-api-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-dog&#0045;api&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=373528&theme=neutral" alt="Dog&#0032;API - JSON&#0032;API&#0032;with&#0032;information&#0032;on&#0032;dog&#0032;breeds&#0032;and&#0032;fun&#0032;facts | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+</p>
+
 <%= image_tag "dogs.jpg", alt: '3 pugs with glasses in front of a computer in an office, digital art' %>
 
 <h3>FAQ</h3>
