--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <meta property="twitter:image" content="<%= image_url 'social.jpg' %>">
 
     <script async src="https://cdn.splitbee.io/sb.js"></script>
+    <script defer src="https://good.lasagna.pizza/script.js" data-website-id="7980a315-6a16-4996-ac59-da18143b0eec"></script>
     <%= javascript_include_tag :application, integrity: true %>
     <% if swagger %>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.5/swagger-ui-bundle.min.js" integrity="sha512-8FFvTCXo6KgUt72SMpgMgMHoHnNUOPxndku0/mc+B98qIeEfZ6dpPDYJv6a1TRWHoEZeMQAKQzcwSmQixM9v2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
